--- a/wordpress/wp-content/themes/kaziya-stollen/css/kaziya.webflow.css
+++ b/wordpress/wp-content/themes/kaziya-stollen/css/kaziya.webflow.css
@@ -96,8 +96,8 @@
   width: 80%;
   height: 70%;
   background-color: rgba(0, 0, 0, .44);
-  background-image: url('../images/875C8FCD-0913-41E0-8A91-893863FF170D_1_105_c.jpeg');
-  background-position: 0 0;
+  background-image: url('../images/boxes.jpg');
+  background-position:center;
   background-size: cover;
   position: relative;
 }
@@ -105,7 +105,9 @@
 .thir-section-img-below.first-below {
   width: 80%;
   height: 70%;
-  background-image: url('../images/380293503_1343632529692415_6216096916306685719_n.jpg');
+  /* 20231126変更 */
+  background-image: url('../images/cooking.jpg');
+  background-position:center;
 }
 
 .thir-section-img-above {
@@ -206,7 +208,7 @@
 
 .text-span-below {
   font-size: 15px;
-  line-height: 20px;
+  line-height: 40px;
 }
 
 .section-5 {
@@ -357,7 +359,7 @@
 }
 
 .f-guesthouse-link {
-  color: #fff;
+  color: #000000;
   font-size: 15px;
   line-height: 25px;
   display: block;
@@ -372,8 +374,8 @@
   z-index: 4;
   width: 100%;
   height: 200px;
-  background-color: #2f2f2f;
-  background-image: url('../images/grain_wood_background_hd_picture_1-1-1-1-1-min.jpg');
+  background-color: #B4B4B4;
+  /* background-image: url('../images/grain_wood_background_hd_picture_1-1-1-1-1-min.jpg'); */
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -412,8 +414,8 @@
 }
 
 .footer-item {
-  color: #fff;
-  -webkit-text-stroke-color: #fff;
+  color: #000000;
+  -webkit-text-stroke-color: #000000;
   font-family: Noto Serif JP, sans-serif;
 }
 
@@ -463,7 +465,7 @@
 }
 
 .copy-right-text {
-  color: #fff;
+  color: #000;
 }
 
 .copy-right {
@@ -478,12 +480,12 @@
 }
 
 .f-kaziya-link {
-  color: #fff;
-  -webkit-text-stroke-color: #fff;
+  color: #000000;
+  -webkit-text-stroke-color: #000000;
 }
 
 .f-top-link, .f-content-link, .f-shop-link {
-  color: #fff;
+  color: #000000;
 }
 
 .top-link {
@@ -536,7 +538,7 @@
   z-index: 2;
   width: 100%;
   height: 200px;
-  background-color: rgba(0, 0, 0, .49);
+  background-color: #B4B4B4;
   position: absolute;
   top: auto;
   bottom: 0%;
@@ -762,10 +764,18 @@
   text-decoration: none;
 }
 
-.kaziya-link {
+.kaziya-link.header {
   color: #fff;
   font-family: Oswald, sans-serif;
   text-decoration: underline;
+}
+
+.kaziya-link.footer {
+  color: #000;
+  font-family: Noto serif JP, sans-serif;
+  text-decoration: underline;
+  height: 1.5em;
+  justify-content: start;
 }
 
 .contact-section{
@@ -803,6 +813,176 @@
   font-size: 1.2rem;
 }
 
+.sixth-section{
+  position: relative;
+  width:85%;
+  height: 1100px;
+  justify-content: flex-end;
+  /* align-items: center; */
+  font-family: Noto Serif JP, sans-serif;
+  padding:0 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.sixth-section p{
+  margin-top: 50px;
+}
+
+.sixth-section p{
+  line-height: 40px;
+  font-size: 16px;
+  margin-bottom:1.5em;
+  width: 100%;
+}
+
+.sixth-section .section-title{
+  width: 100%;
+  height: 32px;
+  font-size:24px;
+  text-align: center;
+}
+
+
+
+.sixth-section .stollen-image{
+  width: 60vw;
+  height: 60vw;
+  background-image: url(../images/stollen.jpg);
+  background-size: cover;
+}
+
+.seventh-section{
+  width:85%;
+  height: 700px;
+  justify-content: flex-end;
+  align-items: center;
+  font-family: Noto Serif JP, sans-serif;
+  padding:0 5%;
+}
+
+.seventh-section .title{
+  font-size: 28px;
+  line-height: 48px;
+}
+
+.seventh-section .shop-information{
+  margin-bottom: 30px;
+}
+
+.seventh-section .shop-information .information-title{
+  height: 4em;
+  display: flex;
+  align-items: baseline;
+  /* justify-content: space-around; */
+}
+
+.seventh-section .shop-information .information-title .title-logo{
+  width: 2.5em;
+  height: 2.5em;
+  background-image: url(../images/open.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.seventh-section .shop-information .information-title p{
+  font-size: 24px;
+}
+
+.seventh-section .shop-information{
+  width: 100%;
+}
+
+.seventh-section .shop-information .shops{
+  display: flex;
+  width: 100%;
+}
+
+.kaziya-shop,
+.gogh-shop{
+  width: 50%;
+  height: 100%;
+  position: relative;
+  padding-bottom: 50px;
+  padding-left: 10px;
+  font-size: 12px;
+}
+
+.gogh-shop{
+  border-left: solid #3c2a21 1px;
+}
+
+.kaziya-shop .shop-logo{
+  background-image: url(../images/kaziya-logo.png);
+}
+
+.gogh-shop .shop-logo{
+  background-image: url(../images/gogh-logo.png);
+}
+
+.logos{
+  width: 20vw;
+  height: 10vw;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.seventh-section .googlemap{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+}
+
+.seventh-section .googlemap a{
+  color: #3c2a21;
+  display: block;
+  display: flex;
+  align-items: baseline;
+}
+
+.googlemap-logo{
+  height: 2em;
+  width: 2em;
+  background-image: url(../images/google-map-logo.png);
+  background-size: contain;
+  background-position: center;
+}
+
+.seventh-section .delivery-information .information-title{
+  height: 4em;
+  display: flex;
+  align-items: center;
+  /* justify-content: space-around; */
+}
+
+.seventh-section .delivery-information .information-title .title-logo{
+  width: 2.5em;
+  height: 2.5em;
+  background-image: url(../images/track.png);
+  background-size: cover;
+  background-position: center;
+}
+
+.title-logo{
+  margin-right: 0.5em;
+}
+
+.seventh-section .delivery-information .information-title p{
+  font-size: 24px;
+}
+
+.footer-logo{
+  background-image: url(../images/logo.png);
+  width: 250px;
+  background-size: cover;
+  background-position: center;
+}
+
+
 @media screen and (min-width: 1280px) {
   .under-hero-section {
     height: 700px;
@@ -832,7 +1012,7 @@
   }
 
   .text-span-below, .price {
-    font-size: 20px;
+    font-size: 16px;
   }
 
   .price-core {
@@ -841,7 +1021,7 @@
 
   .footer {
     -webkit-text-fill-color: inherit;
-    background-color: #424242;
+    background-color: #B4B4B4;
     background-clip: border-box;
   }
 
@@ -863,7 +1043,7 @@
     z-index: 2;
     width: 100%;
     height: 200px;
-    background-color: rgba(0, 0, 0, .49);
+    background-color: #B4B4B4;
     position: absolute;
     top: auto;
     bottom: 0%;
@@ -1046,6 +1226,26 @@
   .menu-button.w--open {
     color: #fff;
     background-color: #a6b1bf;
+  }
+
+  .sixth-section p{
+    margin-bottom: 1em;
+  }
+
+  .seventh-section .title{
+    font-size: 24px;
+  }
+
+  .seventh-section .shops p{
+    font-size: 10px;
+  }
+
+  .seventh-section .information-title p{
+    font-size: 20px!important;
+  }
+
+  .seventh-section .information-title{
+    align-items: baseline!important;
   }
 }
 
@@ -1271,7 +1471,46 @@
     display:flex;
     flex-direction: column;
   }
-}
+
+  .sixth-section p{
+    margin-top: 20px;
+    line-height: 28px;
+    font-size: 12px;
+  }
+
+  .sixth-section{
+    height: 900px;
+  }
+
+  .sixth-section .stollen-image{
+    height: 40vw;
+  }
+
+  .seventh-section{
+    height: 800px;
+  }
+
+  .seventh-section .shops{
+    flex-direction: column;
+  }
+
+  .seventh-section .shops > div{
+    width: 100%;
+    margin-bottom: 10px;
+    border-bottom: solid #3c2a21 1px;
+  }
+
+  .seventh-section .gogh-shop{
+    border-left: none;
+  }
+
+  .seventh-section .shops .shop-logo{
+    width: 30vw;
+    height: 20vw;
+  }
+
+  }
+
 
 @media screen and (max-width: 479px) {
   .top-catch-message {
@@ -1396,6 +1635,19 @@
 
   .nav-menu-three {
     flex-direction: column;
+  }
+
+  .sixth-section .section-title{
+    font-size: 16px;
+  }
+
+  .seventh-section .title{
+    font-size: 20px;
+  }
+
+
+  .seventh-section .information-title p{
+    font-size: 16px;
   }
 }
 
