--- a/wordpress/wp-content/themes/kaziya-stollen/css/kaziya.webflow.css
+++ b/wordpress/wp-content/themes/kaziya-stollen/css/kaziya.webflow.css
@@ -537,7 +537,7 @@
 .footer-background-img {
   z-index: 2;
   width: 100%;
-  height: 200px;
+  height: 100%;
   background-color: #B4B4B4;
   position: absolute;
   top: auto;
@@ -1247,6 +1247,12 @@
   .seventh-section .information-title{
     align-items: baseline!important;
   }
+
+  .footer .footer-logo{
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 150px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1487,7 +1493,7 @@
   }
 
   .seventh-section{
-    height: 800px;
+    height: 1000px;
   }
 
   .seventh-section .shops{
@@ -1509,6 +1515,8 @@
     height: 20vw;
   }
 
+  .footer{
+    height: 100px;
   }
 
 
@@ -1604,7 +1612,7 @@
 
   .footer {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding-left: 13px;
   }
 
@@ -1652,3 +1660,4 @@
 }
 
 
+}
