--- a/wordpress/wp-content/themes/kaziya-stollen/css/kaziya.webflow.css
+++ b/wordpress/wp-content/themes/kaziya-stollen/css/kaziya.webflow.css
@@ -7,6 +7,7 @@
   background-size: cover;
   border: 1px solid #000;
   position: relative;
+
 }
 
 .side-menu {
@@ -94,6 +95,7 @@
 
 .thir-section-img-below {
   width: 80%;
+  max-width: 550px;
   height: 70%;
   background-color: rgba(0, 0, 0, .44);
   background-image: url('../images/boxes.jpg');
@@ -104,6 +106,7 @@
 
 .thir-section-img-below.first-below {
   width: 80%;
+  max-width: 550px;
   height: 70%;
   /* 20231126変更 */
   background-image: url('../images/cooking.jpg');
@@ -470,7 +473,6 @@
 
 .copy-right {
   z-index: 3;
-  height: 100%;
   flex-direction: column;
   justify-content: flex-end;
   padding-bottom: 14px;
@@ -849,6 +851,7 @@
 
 .sixth-section .stollen-image{
   width: 60vw;
+  max-width: 800px;
   height: 60vw;
   background-image: url(../images/stollen.jpg);
   background-size: cover;
@@ -980,6 +983,26 @@
   width: 250px;
   background-size: cover;
   background-position: center;
+}
+
+.top-texts{
+  position: absolute;
+  text-align: center;
+  color: white;
+  font-family: Noto Serif JP, sans-serif;
+  top: 18rem;
+}
+
+.top-texts h1{
+  font-size: 32px;
+  height: 40px;
+  font-weight: lighter;
+}
+
+.top-texts p{
+  font-size: 24px;
+  height: 24px;
+  color:rgba(255, 255, 255, 0.603);
 }
 
 
@@ -1253,6 +1276,20 @@
     background-repeat: no-repeat;
     width: 150px;
   }
+
+  .top-texts{
+    top: 110px;
+  }
+
+  .top-texts h1{
+    font-size: 20px;
+    height: 24px;
+  }
+
+  .top-texts p{
+    font-size: 16px;
+    height: 16px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1518,7 +1555,7 @@
   .footer{
     height: 100px;
   }
-
+}
 
 @media screen and (max-width: 479px) {
   .top-catch-message {
@@ -1657,7 +1694,35 @@
   .seventh-section .information-title p{
     font-size: 16px;
   }
+
+  .top-texts{
+    top: 100px;
+  }
 }
 
+@media screen and (min-width: 1780px) {
+  .sixth-section p{
+    font-size: 24px;
+    line-height: 48px;
+  }
 
+  .sixth-section .section-title{
+    font-size: 32px;
+  }
+
+  .text-span-below{
+    font-size: 20px;
+  }
+
+  .shop-information{
+    position: relative;
+  }
+
+  .shop-information .shops{
+    width: 80%!important;
+    position: relative;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+  }
 }
